--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "exif-js": "^2.3.0",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
+    "@unocss/reset": "^0.60.0",
+    "@unocss/transformer-directives": "^0.60.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
@@ -31,6 +35,8 @@
     "prettier": "^3.2.5",
     "typescript": "~5.4.0",
     "unocss": "^0.60.0",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
     "vue-tsc": "^2.0.11"
   }
