--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "exif-js": "^2.3.0",
+    "exifreader": "^4.23.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "4"
